Dec 14, 2009 - chris
o fixed compilation error if HAM_DISABLE_ENCRYPTION was set

Dec 12, 2009 - chris
o html documentation is now part of the tarball

Dec 03, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.0

Nov 28, 2009 - chris
o Disallowed pagesizes which are not aligned to 2k (with exception of 1k); 
    allowed pagesizes are now 1k, 2k, 4k, 6k, 8k etc

Nov 9, 2009 - chris
o C++ API now has all the new functions
o ham_get_flags is now deprecated - it was replaced by ham_get_parameters
    and ham_env_get_parameters
o the flag HAM_LOCK_EXCLUSIVE is now enabled by default
o the new function ham_get_key_count() returns number of all keys in the 
    Database

Jul 31, 2009 - chris 
o performance improvements in the freelist code, freelist was abstracted
    to allow multiple implementations (all from Ger Hobbelt, 
    http://www.hobbelt.com, http://www.hebbut.net)
o added "Data Access Mode" to give hints how Databases/Environments are used;
    hamsterdb can then optimize its internal algorithms/file formats
    (all from Ger Hobbelt, http://www.hobbelt.com, http://www.hebbut.net)

Jul 26, 2009 - chris 
o the unittest framework "bfc" was improved significantly, allowing new
    command line options and catching HW and win32-exceptions (all from
    Ger Hobbelt, http://www.hobbelt.com, http://www.hebbut.net)

Jul 25, 2009 - chris 
o bugfix: when an Environment is created (or opened), the header page was
    not immediately written (or read); therefore settings were lost, unless
    a database was created (or opened) - Thanks, Ger Hobbelt

Jul 20, 2009 - chris 
o added ham_env_get_parameters, ham_db_get_parameters and
    functions for approximate matching (all from Ger Hobbelt, 
    http://www.hobbelt.com, http://www.hebbut.net)

Jul 19, 2009 - chris 
o added various new asserts, code cleanups, win32 improvements/security
    improvements and new tests (all from Ger Hobbelt, http://www.hobbelt.com,